--- a/themes/hugo-ink/exampleSite/config.toml
+++ b/themes/hugo-ink/exampleSite/config.toml
@@ -1,10 +1,10 @@
 baseURL = "http://example.org/"
 languageCode = "en-us"
-title = "steuxnet"
-theme = "hugo-ink"
+title = "Ink"
+theme = "ink"
 paginate = 5
 
-copyright = "© steuxnet, site generated with hugo-ink."
+copyright = "© Copyright notice"
 
 pygmentsstyle = "vs"
 pygmentscodefences = true
@@ -14,10 +14,11 @@ googleAnalytics = "UA-123-45"
 disqusShortname = "ink-demo"
 
 [params]
-	subtitle = "Personal Blog, just to keep things on map."
+	subtitle = "Crisp, minimal personal [blog theme for Hugo](https://github.com/knadh/hugo-ink)"
 
 	# Optional 64x64 avatar image.
-	avatar = "logo.jpg"
+	avatar = "https://image.freepik.com/free-vector/young-man-head-with-beard-avatar-character_24877-36786.jpg"
+
 	# Content types to disable Disqus on.
 	disableDisqusTypes = ["page"]
 	
